# Mesh-Memory

./: CMakeLists.txt  Manager.cpp  Manager.h  base64.cpp  base64.h  json.h  main.cpp  xReference.cpp  xReference.h
API/: Mesh_Mem_API.cpp  Mesh_Mem_API.h  xReference.h
Application/: Mesh Mem API.cpp  base64.cpp  base64.h  main.cpp  variables.h
Cliente/: client.cpp  client.h  socketClient.cpp  socketClient.h
Headers/: json.hpp
Mesh Mem Client/: Json.cpp  Json.h  Mesh Mem API.cpp  Mesh Mem API.h  client.cpp  client.h
Mesh Mem Manager/: server.cpp  server.h
Servidor/: server.cpp  socketServer.cpp  socketServer.h
